# ly-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  justfile  main.py  pyproject.toml  swagger.yaml
.codex/: config.toml
.github/: copilot-instructions.md
.github/workflows/: docker.yml  live-tests.yml  python.yml  release.yml
docs/: api-endpoint-tool-audit.md
docs/plans/: 2026-05-14_api-coverage-and-tool-schema-plan.md  2026-05-14_cli-support-plan.md  2026-05-14_discovery-prompts-and-query-semantics-plan.md  2026-05-14_ly-mcp-improvement-roadmap-plan.md  2026-05-14_manual-live-and-mock-tests-plan.md  2026-05-14_structured-errors-and-responses-plan.md  2026-05-14_test-contract-and-ci-verification-plan.md
docs/plans/archived/: 2026-05-14_ly-mcp-improvement-roadmap-plan.md  2026-05-14_manual-live-and-mock-tests-plan.md  2026-05-14_test-contract-and-ci-verification-plan.md
skills/ly/: SKILL.md
skills/ly/agents/: openai.yaml
src/lyapimcp/: server.py
src/lymcp/: api.py  api_client.py  cli.py  models.py  server.py  translate.py  types.py
src/lymcp/tools/: __init__.py  bill_detail.py  bill_meets.py  direct_api.py  search_bills.py
tests/: conftest.py  fixtures.py  test_api.py  test_api_mock.py  test_cli_mock.py  test_server.py  test_server_mock.py
tests/data/: bill_detail.json  bills_list.json  gazette_detail.json  gazettes_list.json  law_detail.json  laws_list.json  legislator_detail.json  legislators_list.json  meet_detail.json  meets_list.json  stat.json
