[project]
name            = "lymcp"
version         = "0.2.2"
description     = ""
readme          = "README.md"
requires-python = ">=3.11"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "mcp[cli]>=1.26.0",
]

[project.scripts]
lymcp = "lymcp.server:main"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.8",
  "ty>=0.0.27",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.2.2"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.pytest]
filterwarnings                     = ["ignore::DeprecationWarning"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude     = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
  "B",             # flake8-bugbear
  "C",             # flake8-comprehensions
  "E",             # pycodestyle errors
  "F",             # pyflakes
  "I",             # isort
  "N",             # pep8-naming
  "SIM",           # flake8-simplify
  "UP",            # pyupgrade
  "W",             # pycodestyle warnings
]
ignore = ["C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
