[project]
name            = "lymcp"
version         = "0.2.2"
description     = ""
readme          = "README.md"
requires-python = ">=3.11"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies    = [
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "mcp[cli]>=1.27.1",
]

[project.scripts]
lymcp = "lymcp.server:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.35",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.2.2"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.pytest]
filterwarnings                     = ["ignore::DeprecationWarning"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # "ANN",    # flake8-annotations
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "FURB",   # refurb
  "I",      # isort
  "G",      # flake8-logging-format
  "N",      # pep8-naming
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  # "RUF",    # ruff-specific rules
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.files]
exclude = ["uv.lock"]

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
