[project]
name            = "lymcp"
version         = "0.4.0"
description     = "Model Context Protocol server for Taiwan Legislative Yuan API v2"
readme          = "README.md"
requires-python = ">=3.11"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
license         = { file = "LICENSE" }
keywords        = ["mcp", "model-context-protocol", "taiwan", "legislative-yuan", "api"]
classifiers     = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies    = [
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "mcp[cli]>=1.27.1",
  "typer>=0.25.1",
]

[project.urls]
Homepage   = "https://github.com/narumiruna/ly-mcp"
Repository = "https://github.com/narumiruna/ly-mcp"
Issues     = "https://github.com/narumiruna/ly-mcp/issues"

[project.scripts]
ly    = "lymcp.cli:app"
lymcp = "lymcp.server:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.35",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.4.0"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.pytest]
filterwarnings                     = ["ignore::DeprecationWarning"]
markers                            = [
  "live: tests that call the live Legislative Yuan API or run MCP tools that may call it",
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # "ANN",    # flake8-annotations
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "FURB",   # refurb
  "I",      # isort
  "G",      # flake8-logging-format
  "N",      # pep8-naming
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  # "RUF",    # ruff-specific rules
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.files]
exclude = ["uv.lock"]

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true
